Fix - Add Serialible Serial, add V012 flyway, update java 21